--- a/代码模块说明.md
+++ b/代码模块说明.md
@@ -1,6 +1,6 @@
 # 基于社会计算的金融诈骗检测机制 - 代码模块说明
 
-本文档按照README.md中列出的功能模块，对代码进行分块解释，便于实验报告撰写。
+本文档按照README.md中列出的功能模块，对代码进行分块解释。
 
 ---
 
@@ -813,4 +813,5 @@ def main():
 ## 总结
 
 本系统实现了从数据生成/加载、特征工程、图计算、模型训练、干预仿真到评估可视化的完整流程。各模块职责清晰，通过配置文件统一管理参数，支持多种数据集和模型选择，适用于金融诈骗检测的实验研究。
+
 
